<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/baju"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">


        <ImageView
            android:layout_width="426dp"
            android:layout_height="313dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="-45dp"
            android:layout_marginRight="180dp"
            android:alpha="0.5"
            android:src="@drawable/foto"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="263dp"
            android:layout_gravity="center"
            android:layout_marginTop="-300dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="Firmanda Revivaldy Muchtar"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="#FFF"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/myPict"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/foto"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-100dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/foll"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold"
                style="@style/CodeFont"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:layout_marginTop="-70dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text22"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/follwing"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold"
                style="@style/CodeFont"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:layout_marginTop="-70dp"
            android:layout_marginLeft="140dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text3"
                style="@style/CodeFont"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/post"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="389dp"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/satu"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="245dp"
                android:src="@drawable/pubg_lite" />

            <TextView
                android:id="@+id/pubg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-315dp"
                android:layout_marginRight="10dp"
                android:text="@string/pubgs"
                android:textColor="#FFF"
                android:textSize="11dp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dua"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="245dp"
                android:src="@drawable/call" />

            <TextView
                android:id="@+id/cod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-317dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="-110dp"
                android:text="@string/cods"
                android:textColor="#FFF"
                android:textSize="11dp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tiga"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="150dp"
                android:layout_marginRight="250dp"
                android:layout_marginBottom="245dp"
                android:src="@drawable/chess_rush" />

            <TextView
                android:id="@+id/rush"
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-317dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="-100dp"
                android:text="@string/chess"
                android:textColor="#FFF"
                android:textSize="11dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>